# vidvortex

./: .bashrc  .gitignore  Cargo.toml  README.md
src/: cli.rs  file.rs  main.rs
vidvortex/: Cargo.toml
vidvortex/src/: file.rs  main.rs
