[package]
name = "vidvortex"
version = "0.1.0"
edition = "2021"
description = "Command line utility for retrieving total video length in directory and its subdirectories and do more with videos iguess🤔"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = { version = "2.4.0", features = [] }
mime_guess = "2.0.4"
getopts = "0.2.21"
